# DragPoser

./: LICENSE  README.md
DragPoserDLL/: CMakeLists.txt  exportFunc.cpp  exportFunc.h  main.cpp  utils.cpp  utils.h
DragPoserUnity/Assets/Materials/: GroundMat.mat  Skybox Light.mat
DragPoserUnity/Assets/Prefabs/: Tracker.prefab
DragPoserUnity/Assets/Scenes/: BVHIKScene.unity  IKScene.unity  VRScene.unity
DragPoserUnity/Assets/Scripts/: VRController.cs
DragPoserUnity/Assets/Scripts/Applications/: FBIK.cs  SequenceEditing.cs  VRIK.cs
DragPoserUnity/Assets/Scripts/BVH/: BVHPlayback.cs
DragPoserUnity/Assets/Scripts/Core/: DragPoser.cs  DragPoserDLL.cs  SkeletonAvatar.cs  TrackerRetargeter.cs  UpdateManager.cs
DragPoserUnity/Assets/Scripts/Utils/: MathExtensions.cs
DragPoserUnity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
docs/: index.html
python/: .gitignore  requirements.txt
python/config/: 3_trackers_config.json  4_trackers_config.json  6_trackers_config.json
python/data/example/eval/: example.bvh  example_2.bvh  example_3.bvh
python/models/model_dancedb/: data.pt  generator.pt  parameters.txt
python/src/: autoencoder.py  drag_pose.py  eval_drag.py  eval_metrics.py  generator_architecture.py  loss.py  motion_data.py  positional_encoding.py  run_drag.py  skeleton.py  temporal_transformer.py  train.py  train_data.py  train_temporal.py  unity.py  utils.py
